// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hangingPunctuation renders 0 1`] = `
Array [
  .c0 {
  hanging-punctuation: 0;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: 0;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: 0;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`hangingPunctuation renders function 1`] = `
Array [
  .c0 {
  hanging-punctuation: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: has;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: has;
}

<div
    className="c0"
  />,
]
`;

exports[`hangingPunctuation renders invalid theme path 1`] = `
Array [
  .c0 {
  hanging-punctuation: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`hangingPunctuation renders negative number 1`] = `
Array [
  .c0 {
  hanging-punctuation: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`hangingPunctuation renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    hanging-punctuation: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    hanging-punctuation: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    hanging-punctuation: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    hanging-punctuation: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    hanging-punctuation: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    hanging-punctuation: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    hanging-punctuation: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    hanging-punctuation: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    hanging-punctuation: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    hanging-punctuation: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    hanging-punctuation: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    hanging-punctuation: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    hanging-punctuation: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    hanging-punctuation: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    hanging-punctuation: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    hanging-punctuation: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`hangingPunctuation renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    hanging-punctuation: July;
  }
}

@media April {
  .c0 {
    hanging-punctuation: August;
  }
}

@media January {
  .c0 {
    hanging-punctuation: September;
  }
}

@media April {
  .c0 {
    hanging-punctuation: November;
  }
}

@media June {
  .c0 {
    hanging-punctuation: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    hanging-punctuation: July;
  }
}

@media April {
  .c0 {
    hanging-punctuation: August;
  }
}

@media January {
  .c0 {
    hanging-punctuation: September;
  }
}

@media April {
  .c0 {
    hanging-punctuation: November;
  }
}

@media June {
  .c0 {
    hanging-punctuation: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    hanging-punctuation: January;
  }
}

@media April {
  .c0 {
    hanging-punctuation: December;
  }
}

@media January {
  .c0 {
    hanging-punctuation: April;
  }
}

@media April {
  .c0 {
    hanging-punctuation: May;
  }
}

@media June {
  .c0 {
    hanging-punctuation: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    hanging-punctuation: January;
  }
}

@media April {
  .c0 {
    hanging-punctuation: December;
  }
}

@media January {
  .c0 {
    hanging-punctuation: April;
  }
}

@media April {
  .c0 {
    hanging-punctuation: May;
  }
}

@media June {
  .c0 {
    hanging-punctuation: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`hangingPunctuation renders postitive number 1`] = `
Array [
  .c0 {
  hanging-punctuation: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`hangingPunctuation renders string 1`] = `
Array [
  .c0 {
  hanging-punctuation: July;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: July;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: June;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: June;
}

<div
    className="c0"
  />,
]
`;

exports[`hangingPunctuation renders valid theme path 1`] = `
Array [
  .c0 {
  hanging-punctuation: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  hanging-punctuation: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
